--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     active: dev
 
   datasource:
-    url:
-    username:
-    password:
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -17,6 +17,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        default_batch_fetch_size: 100
+    open-in-view: false # 지연로딩 실수 방지
 
 mybatis:
   mapper-locations: classpath:/mapper/**/*.xml
